--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,7 @@ development:
   timeout: 5000
   username: root
   password: root
+  socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
