--- a/config/database.yml
+++ b/config/database.yml
@@ -18,10 +18,18 @@ test:
   username: root
   password: root
 
+# production:
+#   adapter: mysql2
+#   database: yomi_prod
+#   #pool: 5
+#   timeout: 5000
+#   username: root
+#   password: root
+
 production:
-  adapter: mysql2
-  database: yomi_prod
-  #pool: 5
-  timeout: 5000
-  username: root
-  password: root
+  adapter: postgresql
+  database: d1vinjq67qp1a3
+  host: ec2-54-204-8-224.compute-1.amazonaws.com
+  username: ayifjmwtzrwoul
+  password: obfu4UxSYG8MWHauXgeQgL0Up0
+  port: 5432
