--- a/travis.yml
+++ b/travis.yml
@@ -1,7 +1,6 @@
 language: ruby
+before_install:
+  - gem install bundler
 rvm:
-  -2.2.3
-
-  before_install:
-  - gem update --system
-  - gem --version
+  - 1.9.3
+  - 2.0.0
