--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ test:
 
 # production:
 #   adapter: mysql2
-#   database: yomi_prod
+#   database: yomi_dev
 #   #pool: 5
 #   timeout: 5000
 #   username: root
